--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/81f652e334.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 
     <title>Mein tolles Telefonbuch</title>
@@ -44,9 +42,8 @@
           <figure>
             <img
               <img
-              src="illustration.png"
-              alt="Illustration eines Mädchens, das verträumt vor einem Laptop sitzt"
-            />
+              src="assets/illustration.png"
+              alt="Illustration eines Mädchens, das verträumt vor einem Laptop sitzt" />
             <figcaption>Quelle: Freepik.com</figcaption>
           </figure>
         </div>
@@ -83,12 +80,13 @@
             <i class="fa-solid fa-face-sad-tear"></i>
           </div>
           <p>Du hast keine Kontakte</p>
+          <!-- 
           <iframe
             width="420"
             height="315"
-            src="https://www.youtube.com/embed/2oBXOOmEHa4?autoplay=1&mute=0"
-          >
+            src="https://www.youtube.com/embed/2oBXOOmEHa4?autoplay=1&mute=0">
           </iframe>
+          -->
         </div>
       </section>
     </main>
